--- a/views/chesschecker.ejs
+++ b/views/chesschecker.ejs
@@ -1,13 +1,14 @@
 <%- include('./partials/header') %>
-
+<div class="wrapper">
     <div id="player1">
-      <h1> <span class="player1name"><%= player1.toUpperCase() %> </span> <span class="player1Num">0</span> </h1>
-      <input type="submit" value="win" class="player1Inp"> 
-  </div>
-  <div id="player2">
-      <h1><span class="player2Num">0</span> <span class="player2name"><%= player2.toUpperCase() %> </span>  </h1> 
-      <input type="submit" value="win" class="player2Inp"> 
-  </div>
+        <h1> <span class="player1name"><%= player1.toUpperCase() %> </span> <span class="player1Num">0</span> </h1>
+        <input type="submit" value="win" class="player1Inp"> 
+    </div>
+    <div id="player2">
+        <h1><span class="player2Num">0</span> <span class="player2name"><%= player2.toUpperCase() %> </span>  </h1> 
+        <input type="submit" value="win" class="player2Inp"> 
+    </div>
+</div>
   <div class="form">
     <h3>playing up to: <span> 0</span></h3>
         <input type="number" name="number" id="number"> <br>
