--- a/public/stylesheets/chesschecker.css
+++ b/public/stylesheets/chesschecker.css
@@ -1,44 +1,60 @@
 html body {
-    background: url(https://images.wallpaperscraft.com/image/chess_chess_board_figures_113199_3840x2400.jpg) no-repeat center center;
+    background-color: rgb(132, 132, 250);
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+.wrapper{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
 }
 
 #player1{
-    float: left;
     width: 50%;
-    margin-bottom: 6%;
-
 }
 .player1Num{
-    margin-left: 30%;
+    margin-left: 10%;
 }
 .player2Num{
-    margin-right: 25%;
+    margin-right: 10%;
 }
 #player2{
-    float: right;
     width: 50%;
-    margin-bottom: 6%;
 }
 .form{
-    margin-top: 6%;
     margin-right: 3%;
 }
-
+.form h3{
+    font-size: 29px;
+}
 .container{
     text-align: center;
-    margin-top: 14%;
+    margin-top: 100px;
 }
 input[type="number"]{
-    margin-bottom: 3.5%;
+    height: 30px;
+    margin-bottom: 20px;
 }
 input[type="submit"]{
-    width: 25%;
+    width: 120px;
+    height: 40px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+input[type="submit"]:hover{
+    background-color: rgb(205, 206, 205);
+    border:10px solid rgb(205, 206, 205);
+}
+button{
+    width: 120px;
+    height: 40px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
 .player1Inp{
-    margin-left: -37%;
+    margin-left: 0%;
 }
 .player2Inp{
-    margin-right: -33%;
+    margin-right: 0%;
 }
 .winner{
     color: green;
@@ -47,16 +63,51 @@ input[type="submit"]{
     text-transform: uppercase;
     margin-right: 2%;
 }
+.getStarted:hover{
+    background-color: rgb(17, 160, 17);
+    border: 2px solid rgb(17, 160, 17);
+    color: rgb(250, 250, 250);
+}
 .reset{
     background-color: red;
     border: 2px solid red;
     text-transform: uppercase;
     margin-left: 2%;
 }
-input[type="submit"]{
-    text-transform: uppercase;
-}
 .playerThatWon{
     margin-top: 6%;
     text-transform: uppercase;
 }
+@media  (width:421px){
+    input[type="submit"]{
+        width: 90px;
+        height: 40px;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+}
+
+/* 
+
+@media (width:420px){
+    #player1 h1, #player2 h1{
+        font-size: 20px;
+    }
+    .player1Num{
+        margin-left: 2%;
+    }
+    .player2Num{
+        margin-right: 2%;
+    }
+}
+@media (width:375px){
+    #player1 h1, #player2 h1{
+        font-size: 20px;
+    }
+    .player1Num{
+        margin-left: 2%;
+    }
+    .player2Num{
+        margin-right: 2%;
+    }
+} */
