--- a/views/partials/homeHeader.ejs
+++ b/views/partials/homeHeader.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/stylesheets/chess.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
     <title>Document</title>
 </head>
