--- a/views/partials/homeHeader.ejs
+++ b/views/partials/homeHeader.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/chess.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
-    <title>Document</title>
+    <title>Game tracker</title>
 </head>
 <body>
   <div class="container">
