--- a/public/stylesheets/chess.css
+++ b/public/stylesheets/chess.css
@@ -54,9 +54,9 @@ html body {
 
 
   /* responsiveness */
-  @media(width:375px){
+  @media only screen and(width:375px){
     .btn {
-        margin: 0px auto;
+      margin: 0px auto;
       margin-top: 15px;
       margin-left: 23%;
       padding: 5px;
